...
          ),
        }}
      />
      <Tabs.Screen
        name="bible"
        options={{
          tabBarButtonTestID: "tab.bible",
          title: t("tab_bible"),
          tabBarIcon: ({ color, size, focused }) => (
            <TabBarIcon focused={focused}>
              <Ionicons name="book-outline" color={color} size={size} />
            </TabBarIcon>
          ),
...
          ),
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
          tabBarButtonTestID: "tab.settings",
          title: t("settings_tab_title"),
          tabBarIcon: ({ color, size, focused }) => (
            <TabBarIcon focused={focused}>
              <View>
                <Ionicons name="settings-outline" color={color} size={size} />
                {showSignInAlert && <AttentionDot />}
...
