...
const authStore = useAuthStore();
</script>

<i18n lang="json">
{
  "en": {
    "account": "Account",
    "change_email": "Change Email",
    "password": "Password",
    "you_can_change_your_password_below": "You can change your password below.",
    "change_password": "Change Password",
    "delete_account": "Delete Account",
    "you_are_in_control": "You are in control of your data. You can delete your account and all data associated with it.",
...
