...
    newTestament: false,
    chapterCount: 50,
    usfmCode: 'GEN',
    blbCode: 'Gen',
    locales: {
      de: {
        name: 'Genesis',
        abbreviations: [
          'Gen',
          '1. Mose',
        ],
      },
      en: {
...
    newTestament: false,
    chapterCount: 40,
    usfmCode: 'EXO',
    blbCode: 'Exo',
    locales: {
      de: {
        name: 'Exodus',
        abbreviations: [
          'Ex',
          '2. Mose',
        ],
      },
      en: {
...
        abbreviations: [
          'Lev',
          '3. Mose',
        ],
      },
      en: {
        name: 'Leviticus',
        abbreviations: [
          'Lev',
          'Le',
          'Lv',
        ],
      },
...
