...
    <View style={styles.header}>
      <ScreenHeader
        title={t("bible_books_title")}
        right={
          <Button
            label={t("progress_title")}
            testID="bible.progress-link"
            variant="secondary"
            leftIcon="stats-chart-outline"
            rightIcon="chevron-forward"
            onPress={() => router.push("/bible/progress")}
          />
        }
...
